Persist keycloak realm, fix deployment status issues
