# src/main/kotlin/mk/ukim/finki/dnick/hosting/controller/BaseImageController.kt
@@ -1,16 +1,93 @@
 package mk.ukim.finki.dnick.hosting.controller
 
+import jakarta.validation.Valid
+import mk.ukim.finki.dnick.hosting.generated.model.*
 import mk.ukim.finki.dnick.hosting.model.domain.BaseImageArgStage
 import mk.ukim.finki.dnick.hosting.model.domain.BaseImageArgType
-import mk.ukim.finki.dnick.hosting.service.BaseImageRequest
+import mk.ukim.finki.dnick.hosting.service.BaseImageArgumentRequest
 import mk.ukim.finki.dnick.hosting.service.BaseImageService
+import org.springframework.data.domain.Pageable
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.*
+import java.util.stream.Stream
+import mk.ukim.finki.dnick.hosting.generated.model.BaseImageRequest as BaseImageRequestDto
 
 @RestController
 @CrossOrigin(origins = ["*"])
-@RequestMapping("$API_V1_PATH/base-image")
+@RequestMapping("$API_V2_PATH/base-image")
 class BaseImageController(private val baseImageService: BaseImageService) {
+
+    @GetMapping
+    fun getBaseImages(
+        @Valid baseImageCriteria: BaseImageCriteria,
+        @Valid pageable: Pageable = Pageable.unpaged()
+    ): ResponseEntity<BaseImageResponse> {
+        return baseImageService.findBaseImagesBy(baseImageCriteria, pageable)
+            .let {
+                BaseImageResponse(
+                    data = it.flatMap { b ->
+                        Stream.concat(
+                            if ((baseImageCriteria.type == null || baseImageCriteria.type == BaseImageType.EXE) && baseImageCriteria.buildTool == null)
+                                b.baseImagesExe.stream().map { be ->
+                                    BaseImage(
+                                        id = be.ref.id!!,
+                                        type = BaseImageType.EXE,
+                                        language = b.language,
+                                        version = b.version,
+                                        arguments = be.ref.arguments.map { a ->
+                                            BaseImageArgument(
+                                                name = a.name,
+                                                description = a.description,
+                                                type = BaseArgumentType.forValue(a.type.name.uppercase()),
+                                                stage = BaseArgumentStage.forValue(a.stage.name.uppercase())
+                                            )
+                                        }
+                                    )
+                                } else Stream.empty(),
+                            if (baseImageCriteria.type == null || baseImageCriteria.type == BaseImageType.GIT)
+                                b.baseImagesGit.stream()
+                                    .filter { bg ->
+                                        baseImageCriteria.buildTool == null ||
+                                                bg.buildTool.contains(baseImageCriteria.buildTool)
+                                    }
+                                    .map { bg ->
+                                        BaseImage(
+                                            id = bg.ref.id!!,
+                                            type = BaseImageType.GIT,
+                                            language = b.language,
+                                            version = b.version,
+                                            arguments = bg.ref.arguments.map { a ->
+                                                BaseImageArgument(
+                                                    name = a.name,
+                                                    description = a.description,
+                                                    type = BaseArgumentType.forValue(a.type.name.uppercase()),
+                                                    stage = BaseArgumentStage.forValue(a.stage.name.uppercase())
+                                                )
+                                            }
+                                        )
+                                    }
+                            else Stream.empty()
+                        )
+                    }.toList(),
+                    metadata = ResponseMetadata(it.toPagination())
+                )
+            }.let { ResponseEntity.ok(it) }
+    }
+
+    @PostMapping
+    fun createBaseImage(@RequestBody body: BaseImageRequestDto) {
+        baseImageService.createBaseImage(body)
+    }
+
+    @PutMapping("/{id}")
+    fun updateBaseImage(@PathVariable id: Int, @RequestBody body: BaseImageUpdateRequest) {
+        baseImageService.updateBaseImage(id, body)
+    }
+
+    @DeleteMapping("/{id}")
+    fun deleteBaseImage(@PathVariable id: Int) {
+        baseImageService.deleteBaseImage(id)
+    }
 
     @GetMapping("/languages")
     fun getLanguages(): ResponseEntity<List<String>> {
@@ -47,7 +124,7 @@ class BaseImageController(private val baseImageService: BaseImageService) {
     )
 
     @GetMapping("/build-arguments")
-    fun getBuildArguments(buildTool: BaseImageRequest): ResponseEntity<BaseImageArgumentsResponse> {
+    fun getBuildArguments(buildTool: BaseImageArgumentRequest): ResponseEntity<BaseImageArgumentsResponse> {
         return BaseImageArgumentsResponse(
             arguments = baseImageService.findArguments(buildTool).map {
                 BaseImageArgumentDto(
