# src/main/kotlin/mk/ukim/finki/dnick/hosting/controller/BaseImageCriteria.kt
@@ -1,0 +1,9 @@
+package mk.ukim.finki.dnick.hosting.controller
+
+import mk.ukim.finki.dnick.hosting.generated.model.BaseImageType
+
+data class BaseImageCriteria(
+    val type: BaseImageType?,
+    val language: String?,
+    val buildTool: String?
+)
