# src/main/kotlin/mk/ukim/finki/dnick/hosting/controller/DeploymentController.kt
@@ -6,9 +6,14 @@ import mk.ukim.finki.dnick.hosting.infra.config.KubernetesProperties
 import mk.ukim.finki.dnick.hosting.service.DeploymentService
 import mk.ukim.finki.dnick.hosting.service.NamespaceService
 import org.springframework.data.domain.Pageable
+import org.springframework.http.HttpStatus.BAD_REQUEST
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.*
+import org.springframework.web.server.ResponseStatusException
+import java.time.ZoneOffset
 import mk.ukim.finki.dnick.hosting.generated.model.DeploymentService as ModelDeploymentService
+import mk.ukim.finki.dnick.hosting.model.domain.DeploymentState.Companion as DeploymentStateDomain
+import mk.ukim.finki.dnick.hosting.model.entity.Deployment as DeploymentEntity
 
 @RestController
 @RequestMapping("/api/v2/deployments")
@@ -24,6 +29,10 @@ class DeploymentController(
         return ResponseEntity.ok().build()
     }
 
+    @GetMapping("/{id}")
+    fun getDeployment(@PathVariable id: Int): ResponseEntity<DeploymentDetails> {
+        return ResponseEntity.ok(deploymentService.getDeployment(id).toDetailResponse())
+    }
 
     @DeleteMapping("/{id}")
     fun deleteDeployment(@PathVariable id: Int): ResponseEntity<Unit> {
@@ -32,48 +41,13 @@ class DeploymentController(
     }
 
     @GetMapping
-    fun getDeployments(): ResponseEntity<DeploymentsResponse> {
-        return ResponseEntity.ok(deploymentService.getDeployments(Pageable.unpaged()).let {
+    fun getDeployments(
+        @Valid criteria: DeploymentCriteria,
+        @Valid pageable: Pageable = Pageable.unpaged()
+    ): ResponseEntity<DeploymentsResponse> {
+        return ResponseEntity.ok(deploymentService.getDeployments(criteria, Pageable.unpaged()).let {
             DeploymentsResponse(
-                it.map { deployment ->
-                    Deployment(
-                        id = deployment.id!!,
-                        uid = deployment.uid.toString(),
-                        name = deployment.name,
-                        cluster = DeploymentCluster(
-                            url = kubernetesProperties.url,
-                            namespace = namespaceService.getUserNamespace()
-                        ),
-                        image = deployment.pods.first().activeImage.let { i ->
-                            DeploymentImage(
-                                id = i.image.id!!,
-                                name = i.image.name,
-                                tag = DeploymentImageTag(
-                                    id = i.id!!,
-                                    version = i.version
-                                ),
-                            )
-                        },
-                        service = deployment.pods.first().servicePorts.first().let {
-                            ModelDeploymentService(
-                                port = it.port,
-                                id = it.service.id,
-                                name = it.service.name
-                            )
-                        },
-                        state = DeploymentState.forValue(deployment.state.name.uppercase()),
-                        group = DeploymentGroup(
-                            id = deployment.application.id!!,
-                            name = deployment.application.name,
-                        ),
-                        ingress = deployment.pods.first().servicePorts.first().ingressRules.firstOrNull()?.let { ir ->
-                            DeploymentIngress(
-                                id = ir.ingress.id!!,
-                                path = ir.path
-                            )
-                        },
-                    )
-                }.toList(),
+                it.map { deployment -> deployment.toResponse() }.toList(),
                 metadata = ResponseMetadata(
                     pagination = it.toPagination()
                 )
@@ -81,7 +55,93 @@ class DeploymentController(
         })
     }
 
-    @PatchMapping("/{id}")
+    @PatchMapping("/{id}/state")
+    fun updateDeploymentState(
+        @PathVariable id: Int,
+        @RequestBody @Valid state: DeploymentState
+    ): ResponseEntity<DeploymentDetails> {
+        deploymentService.setDeploymentState(
+            id,
+            state.toDomain() ?: throw ResponseStatusException(BAD_REQUEST, "Invalid state")
+        );
+        return ResponseEntity.noContent().build()
+    }
+
+    private fun DeploymentEntity.toDetailResponse() = DeploymentDetails(
+        id = this.id!!,
+        uid = this.uid.toString(),
+        general = DeploymentDetailsGeneral(
+            name = this.name,
+            port = this.pods.first().port,
+        ),
+        service = this.pods.first().servicePorts.first().service.let {
+            DeploymentDetailsService(
+                name = it.name
+            )
+        },
+        group = Group(
+            id = this.application.id!!,
+            name = this.application.name,
+        ),
+        imageTag = this.pods.first().activeImage.let {
+            ImageTag(
+                id = it.id!!,
+                uid = it.hash.toString(),
+                version = it.version,
+                created = it.createdAt.atOffset(ZoneOffset.UTC),
+                status = ImageTagStatus.forValue(it.status.toString().uppercase())
+            )
+        },
+        environment = this.pods.first().environment.values.map { it.name to it.value }.toMap(),
+        ingress = this.pods.first().servicePorts.first().ingressRules.firstOrNull()?.let { ir ->
+            DeploymentCreateRequestIngress(
+                name = ir.ingress.name,
+                path = ir.path
+            )
+        },
+    )
+
+    private fun DeploymentEntity.toResponse(): Deployment {
+        return Deployment(
+            id = this.id!!,
+            uid = this.uid.toString(),
+            name = this.name,
+            cluster = DeploymentCluster(
+                url = kubernetesProperties.url,
+                namespace = namespaceService.getUserNamespace()
+            ),
+            image = this.pods.first().activeImage.let { i ->
+                DeploymentImage(
+                    id = i.image.id!!,
+                    name = i.image.name,
+                    tag = DeploymentImageTag(
+                        id = i.id!!,
+                        version = i.version
+                    ),
+                )
+            },
+            service = this.pods.first().servicePorts.first().let {
+                ModelDeploymentService(
+                    port = it.port,
+                    id = it.service.id,
+                    name = it.service.name
+                )
+            },
+            state = DeploymentState.forValue(this.state.name.uppercase()),
+            group = DeploymentGroup(
+                id = this.application.id!!,
+                name = this.application.name,
+            ),
+            ingress = this.pods.first().servicePorts.first().ingressRules.firstOrNull()?.let { ir ->
+                DeploymentIngress(
+                    id = ir.ingress.id!!,
+                    path = ir.path
+                )
+            },
+        )
+    }
+
+    @PutMapping("/{id}")
     fun updateDeployment(
         @PathVariable id: Int,
         @RequestBody @Valid request: DeploymentCreateRequest
@@ -90,4 +150,6 @@ class DeploymentController(
         return ResponseEntity.ok().build()
     }
 
+    private fun DeploymentState.toDomain() = DeploymentStateDomain.of(this.value)
 }
+
